# Q4_Program_Charlie

./: .gitignore  CMakeLists.txt  Q4_Program.cpp  Q4_Program.sln  README.md  bounds.txt  elements.txt  k.txt  新建文本文档 .text
Q4_Program/: AssignElement.cpp  B_matrix.cpp  B_matrix.hpp  Elementstress.cpp  Elemstiffness.cpp  Elemstiffness.hpp  Q4_Program.cpp  Q4_Program.vcxproj  Q4_Program.vcxproj.filters  bounds.txt  eleB.hpp  eleBcpp.cpp  elements.txt  ex1.cpp  ex1.hpp  ja.cpp  ja.hpp  loads.txt  mesh2.k  newRead.cpp  newRead.hpp  nodes.txt  readData.cpp  readData.hpp  shapeFuncAndDiff.cpp  shapeFuncAndDiff.hpp
Q4_Program/x64/Debug/: Q4_Program.exe.recipe  vc142.idb
Q4_Program/x64/Debug/Q4_Program.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Q4_Program.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
example/: ex1.cpp  ex1.hpp
general/: shapeFuncAndDiff.cpp  shapeFuncAndDiff.hpp
include/: B_matrix.hpp  Elemstiffness.hpp  IO.hpp  ja.hpp  node.hpp  shapeFuncAndDiff.hpp
src/: B_matrix.cpp  CMakeLists.txt  Elemstiffness.cpp  IO.cpp  Q4_Program.cpp  ex1.cpp  ex1.hpp  ja.cpp  main.cpp  newRead.cpp  newRead.hpp  node.cpp  shapeFuncAndDiff.cpp  shapeFuncAndDiff.hpp
x64/Debug/: Q4_Program.ilk
